# academic_portfolio

./: README.md
Data_Integration_System/: vacio.txt
Key Projects/: vacio.txt
Key Projects/Data_Integration_System/: README.md  README_TCA_EN.md  vacio.txt
Key Projects/Data_Integration_System/backend/: .gitignore
Key Projects/Data_Integration_System/backend/app/core/: config.py
Key Projects/Data_Integration_System/backend/app/services/: inference.py
Key Projects/Data_Integration_System/my-kedro-project/final-tca-pipeline-reto/: README.md  pyproject.toml
Key Projects/Data_Integration_System/my-kedro-project/tca-pipeline/: .gitignore
Key Projects/Data_Integration_System/reto-tca/backend/: .dockerignore
Key Projects/Data_Integration_System/reto-tca/frontend/: Dockerfile  notebook.ipynb  pyproject.toml
Key Projects/Data_Integration_System/reto-tca/kubernetes_config/: inference_api.yaml
Key Projects/Hotel_Occupancy_Forecasting_Pipeline/: vacio.txt
Key Projects/Hotel_Occupancy_Forecasting_Pipeline/frontend/: KPIs.md
Key Projects/Hotel_Occupancy_Forecasting_Pipeline/my-kedro-project/final-tca-pipeline-reto/: requirements.txt
Key Projects/Hotel_Occupancy_Forecasting_Pipeline/my-kedro-project/tca-pipeline/: README.md
Key Projects/Intelligent_Shelf_Monitoring/: vacio.txt
Key Projects/Product_Success_Prediction_Model/: Reto Modelos IA-1.ipynb  Reto Redes Neuronales -1.ipynb  vacio.txt
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: __init__.py
backend/app/models/: iar_agencias.py
backend/app/services/: inference.py  pipeline.py  raw_data.py
backend/app/utils/: schema.py
backend/app/utils/models/: prophet_model.pkl
backend/src/: main.py
backend/src/core/: config.py
backend/src/db/: __init__.py  base.py
backend/src/models/: iar_agencias.py  iar_canales.py  iar_empresas.py  iar_estatus_reservaciones.py  reservaciones.py
backend/src/services/: inference.py
frontend/: Dockerfile  __init__.py  app.py  main.py  pyproject.toml  requirements.txt
frontend/app/: main.py
frontend/app/utils/: data_extractor.py
frontend/components/: filters.py
frontend/data/: iar_Agencias.csv  reservations_clean.parquet  reservations_filtered.parquet  rooms_by_date.parquet
frontend/utils/: api_client.py  data_extractor.py  data_extractor_v2.py
inference_api/: Dockerfile  pyproject.toml
inference_api/src/: inference.py  main.py  preprocessing.py
inference_api/src/models/: prophet_model.pkl  scaler.pkl
inference_api/src/utils/: schema.py
kubernetes_config/: frontend.yaml  inference_api.yaml  pod.yaml  secretproviderclass.yaml
my-kedro-project/final-tca-pipeline-reto/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
my-kedro-project/final-tca-pipeline-reto/conf/: logging.yml
my-kedro-project/final-tca-pipeline-reto/conf/base/: catalog.yml  parameters.yml
my-kedro-project/final-tca-pipeline-reto/docs/source/: index.rst
my-kedro-project/final-tca-pipeline-reto/src/final_tca_pipeline_reto/: pipeline_registry.py
my-kedro-project/tca-pipeline/: .gitignore  Dockerfile  pruebas.ipynb  pyproject.toml  stats.json
my-kedro-project/tca-pipeline/conf/base/: catalog.yml  parameters.yml  parameters_reservations_preprocessing.yml
my-kedro-project/tca-pipeline/data/07_optuna/: gru_best_params.yml  lstm_best_params.yml  transformer_best_params.yml
my-kedro-project/tca-pipeline/docs/source/: index.rst
my-kedro-project/tca-pipeline/src/tca_pipeline/: __init__.py  hooks.py  pipeline_registry.py  settings.py
my-kedro-project/tca-pipeline/src/tca_pipeline/pipelines/reservations_data_modeling/: nodes.py  optuna_objectives.py  pipeline.py  run_optuna_study.py
my-kedro-project/tca-pipeline/src/tca_pipeline/pipelines/reservations_inference/: nodes.py  pipeline.py
my-kedro-project/tca-pipeline/src/tca_pipeline/pipelines/reservations_preprocessing/: nodes.py  pipeline.py
my-kedro-project/tca-pipeline/tests/pipelines/data_science/: test_pipeline.py
(+52 files in other folders)
