[project]
name = "inference-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi>=0.115.12",
    "holidays>=0.74",
    "pandas>=2.2.3",
    "prophet>=1.1.7",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.3",
]
