[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "tca_pipeline"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "ipython>=8.10",
  "jupyterlab>=3.0",
  "notebook",

  "kedro[jupyter]==0.19.8",

  "kedro-docker>=0.3.0",
  "kedro-mlflow>=0.12.0,<0.13.0",
  "kedro-kubeflow==0.8.0",

  "kedro-datasets[matplotlib-matplotlibwriter,pandas-csvdataset,pandas-exceldataset,pandas-parquetdataset,plotly-jsondataset,plotly-plotlydataset,spark-sparkdataset]>=3.0",
  "kedro-viz>=6.7.0",

  "scikit-learn~=1.5.1",
  "seaborn~=0.12.1",
  "pyspark>=3.5.5",

  "mlflow>=2.11.0",
  "torch>=2.0",
  "prophet",     
  "holidays",

  "setuptools; python_version >= '3.12'"
]

[project.scripts]
"tca-pipeline" = "tca_pipeline.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "pytest-cov~=3.0",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.1.8"
]

[tool.setuptools.dynamic]
version = {attr = "tca_pipeline.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "tca_pipeline"
project_name = "tca-pipeline"
kedro_init_version = "0.19.12"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure', 'PySpark']"
example_pipeline = "True"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/tca_pipeline -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long

[tool.kedro_telemetry]
project_id = "97eac6af88484e02b92e446485bc80af"
